fixed image scaling

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
         <div class="bottomControls">
             <div class="scaleSliderContainer">
-                <input id="scaleRangeSlider" class="scaleSlider" type="range" min="1" max="72" step="1">
+                <input id="scaleRangeSlider" class="scaleSlider" type="range" min="1" max="72" step="1" value="72">
             </div>
 
             <div class="buttonGroup">
