--- a/index.html
+++ b/index.html
@@ -22,18 +22,22 @@
             </label>
             <label class="scaleOptionsLabel">
                 <input type="radio" class="scaleOptionsInput" name="scaleOptions" value="72"  checked/>
-                <span class="scaleOptionsSpan">72 Inches</span>
+                <span id="fabricWidthOption" class="scaleOptionsSpan">-- Inches</span>
             </label>
         </div>
 
         <div class="displayContainer">
-            <div class="rulers"> Rulers</div>
+            <div class="rulers">
+                <div>In.</div>
+                <div id="verticalRuler"></div>
+                <div id="horizontalRuler"></div>
+            </div>
             <div class="display" id="display"> Display</div>
         </div>
 
         <div class="bottomControls">
             <div class="scaleSliderContainer">
-                <input id="scaleRangeSlider" class="scaleSlider" type="range" min="1" max="72" step="1" value="72">
+                <input id="scaleRangeSlider" class="scaleSlider" type="range" min="1" max="0" step="1" value="0">
             </div>
 
             <div class="buttonGroup">
@@ -41,7 +45,7 @@
                 <div class="scaleInputContainer">
                     <button id="minusButton" class="addButton" onclick="changePreviewImageScale(-1)">-</button>
                     <div class="inputNumberContainer">
-                        <input id="scaleInput" class="inputNumber" type="number" value="72">
+                        <input id="scaleInput" class="inputNumber" type="number" value="0">
                     </div>
                     <button id="addButton" class="addButton" onclick="changePreviewImageScale(1)">+</button>
                 </div>
