Add simple Rulers

--- a/index.html
+++ b/index.html
@@ -21,18 +21,18 @@
                 <span class="scaleOptionsSpan">24 Inches</span>
             </label>
             <label class="scaleOptionsLabel">
-                <input type="radio" class="scaleOptionsInput" name="scaleOptions" value="72"  checked/>
-                <span id="fabricWidthOption" class="scaleOptionsSpan">-- Inches</span>
+                <input id="fabricWidthOptionInput" type="radio" class="scaleOptionsInput" name="scaleOptions" value="72"  checked/>
+                <span id="fabricWidthOptionSpan" class="scaleOptionsSpan">-- Inches</span>
             </label>
         </div>
 
         <div class="displayContainer">
             <div class="rulers">
-                <div>In.</div>
+                <div class="rulerLabel">In.</div>
                 <div id="verticalRuler"></div>
                 <div id="horizontalRuler"></div>
             </div>
-            <div class="display" id="display"> Display</div>
+            <div class="display" id="display"></div>
         </div>
 
         <div class="bottomControls">
